# blockdoc-python

./: .flake8  CHANGELOG.md  pyproject.toml  repomix-output.xml  requirements.txt  setup.py  streamlit_app.py
.github/workflows/: python-lint.yml  python-tests.yml
.streamlit/: config.toml
blockdoc/: __init__.py
blockdoc/conversions/: markdown.py
blockdoc/core/: block.py
blockdoc/renderers/: html.py  markdown.py
docs/spec/: blockdoc-specification.md
examples/: README.md  basic_example.py  markdown_conversion_example.py  streamlit_app.py  streamlit_app_README.md
examples/llm-integration/: llm_content_generator.py
examples/simple-blog/: blog_generator.py
scripts/: format.sh  lint.sh
tests/conversions/: test_markdown.py
tests/core/: test_block.py  test_document.py
